fix plugin